Changed the description of the todo.json file and took out ajax call from index.html trying to get the page to load, Also renamed the app.js to client-app.js for clarity

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -37,8 +37,7 @@
       </div>
     </div>
  
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="javascripts/app/app.js"></script>
+    <script src="javascripts/app/client-app.js"></script>
   </body>
 </html>
